@@ -17,7 +17,7 @@
 			<B>{trans("Subject:")}</B>
 		</TD>
 		<TD WIDTH="99%">
-			<INPUT type="text" size="75" name="message[subject]" value="{$message.subject}" {tip text="Enter message subject" trigger="subject"}>
+			<INPUT type="text" size="75" name="message[subject]" maxlength="255" value="{$message.subject}" {tip text="Enter message subject" trigger="subject"}>
 		</TD>
 	</TR>
     </THEAD>
