@@ -37,6 +37,7 @@ version ?.??.?? (????-??-??):
     for text/blob fields [chilan]
   - improved voip scripts and updated voip tables in database [kosa]
   - improved voip billing list search [kosa]
+  - added check for maximum helpdesk subject length [kosa]
 
 version 1.11.20 (2016-04-19):
 
